<resources>
    <string name="app_name"> </string>
    <string name="navigation_drawer_open">Open Navigation drawer</string>
    <string name="navigation_drawer_close">Close Navigation drawer</string>
    <string name="enter_your_email">Enter Your Email</string>
    <string name="reset_password">Reset Password</string>
    <string name="start">Start</string>
    <string name="results">Results</string>
    <string name="sensor_return_value">Sensor Return Value</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="welcome_back">Welcome Back,</string>
    <string name="we_missed_you">We Missed You.</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="right_arrow">></string>
    <string name="nice_to_meet">Nice To Meet</string>
    <string name="youcomma">You,</string>
    <string name="enter_your_information_below_or">Enter your information below or</string>
    <string name="login_with_a_social_account">login with a social account</string>
    <string name="password">Password</string>
    <string name="password_again">Password again</string>
    <string name="email_address">Email Address</string>
    <string name="settings">Settings</string>
    <string name="language">Language</string>
    <string name="help_center">Help Center</string>
    <string name="about">About</string>
    <string name="contact_us">Contact Us</string>
    <string name="change_password">Change Password</string>
    <string name="communicate">Communicate</string>
    <string name="schedule">Schedule</string>
    <string name="logout">Logout</string>
    <string name="stop">Stop</string>
    <string name="budget_roomba">Budget Roomba</string>
    <string name="powered_by">Powered by</string>
</resources>